fixes header cutoff on mobile

--- a/css/all.css
+++ b/css/all.css
@@ -570,7 +570,7 @@ input[type=button]:hover {cursor:pointer;}
 /* Mobile */
 @media only screen and (max-width:767px){
 	#header{padding:0 0 0 8px;
-	    margin-left: -64px;
+	    margin-left: -0;
 	}
 	.logo{
 		width:102px;
